--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
   <ul>
    <li><a href="/profiles/johndbritton.html">johndbritton</a></li>
-   <li><a href="/profiles/davehand.html">davehand</a></li>
+   <li><a href="profiles/davehand.html">davehand</a></li>
   </ul>
 </body>
